--- a/server/SQL/package.json
+++ b/server/SQL/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "mysql2": "^2.3.3"
+    "body": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mysql2": "^2.3.3",
+    "parser": "^0.1.4"
   }
 }
